--- a/backend/package.json
+++ b/backend/package.json
@@ -7,14 +7,15 @@
     "start": "babel-node src/index.js",
     "lint": "eslint src"
   },
-  "dependencies": {
+  "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.3",
     "babel-preset-env": "^1.7.0",
-    "eslint": "^4.19.1"
-  },
-  "devDependencies": {
+    "babel-preset-flow": "^6.23.0",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.11.0"
+    "eslint-plugin-flowtype": "^2.46.3",
+    "eslint-plugin-import": "^2.11.0",
+    "flow-bin": "^0.72.0"
   }
 }
