--- a/backend/package.json
+++ b/backend/package.json
@@ -19,5 +19,8 @@
     "eslint-plugin-jest": "^21.15.1",
     "flow-bin": "^0.72.0",
     "jest": "^22.4.3"
+  },
+  "dependencies": {
+    "convict": "^4.2.0"
   }
 }
