--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,18 @@
     "jest": "^22.4.3"
   },
   "dependencies": {
+    "blipp": "^3.0.0",
+    "boom": "^7.2.0",
     "bristol": "^0.4.0",
-    "convict": "^4.2.0"
+    "convict": "^4.2.0",
+    "glue": "^5.0.0",
+    "hapi": "^17.4.0",
+    "hapi-alive": "^2.0.0",
+    "hapi-response-time": "^2.0.0",
+    "hapi-router": "^4.0.0",
+    "inert": "^5.1.0",
+    "joi": "^13.3.0",
+    "nunjucks": "^3.1.2",
+    "vision": "^5.3.2"
   }
 }
