--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,8 @@
     "inert": "^5.1.0",
     "joi": "^13.3.0",
     "nunjucks": "^3.1.2",
+    "pg": "^7.4.3",
+    "postgrator": "^3.6.0",
     "vision": "^5.3.2"
   }
 }
