--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,7 @@
     "nunjucks": "^3.1.2",
     "pg": "^7.4.3",
     "postgrator": "^3.6.0",
+    "promise-retry": "^1.1.1",
     "vision": "^5.3.2"
   }
 }
