--- a/webapp/package.json
+++ b/webapp/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "history": "^4.7.2",
+    "i18next": "^11.3.2",
+    "i18next-browser-languagedetector": "^2.2.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-i18next": "^7.6.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
