--- a/webapp/.flowconfig
+++ b/webapp/.flowconfig
@@ -1,5 +1,6 @@
 [ignore]
 <PROJECT_ROOT>/node_modules/vision/test/templates/invalid/helpers/bad1.json
+<PROJECT_ROOT>/node_modules/immer/dist/immer.js.flow
 
 [include]
 
