--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,9 @@ services:
     worlds-backend:
         build: backend
         ports:
-            - "127.0.0.1:3000:3000"
+            - "127.0.0.1:4000:4000"
         environment:
-            PORT: 3000
+            PORT: 4000
             NODE_ENV: production
             POSTGRES_HOST: worlds-postgres
             POSTGRES_PORT: 5432
@@ -21,4 +21,6 @@ services:
     worlds-webapp:
         build: webapp
         ports:
-            - "127.0.0.1:4000:80"
+            - "127.0.0.1:3000:80"
+        environment:
+            API_URI: http://localhost:4000
