--- a/worlds-service/pom.xml
+++ b/worlds-service/pom.xml
@@ -5,25 +5,16 @@
 
 	<groupId>uk.co.grahamcox.worlds</groupId>
 	<artifactId>worlds-service</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>worlds-service</name>
 	<description>Backend Service for New Worlds</description>
 
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.2.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>uk.co.grahamcox.worlds</groupId>
+		<artifactId>worlds</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
 	</parent>
-
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>1.8</java.version>
-		<kotlin.version>1.2.41</kotlin.version>
-	</properties>
 
 	<dependencies>
 		<dependency>
