--- a/worlds-service/pom.xml
+++ b/worlds-service/pom.xml
@@ -65,6 +65,12 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
+            <groupId>commons-jxpath</groupId>
+            <artifactId>commons-jxpath</artifactId>
+            <version>1.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-java</artifactId>
             <version>${version.cucumber}</version>
