--- a/worlds-service/pom.xml
+++ b/worlds-service/pom.xml
@@ -6,7 +6,6 @@
         <groupId>uk.co.grahamcox.worlds</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <groupId>uk.co.grahamcox.worlds</groupId>
     <artifactId>worlds-service</artifactId>
     <packaging>jar</packaging>
     <name>worlds-service</name>
@@ -18,6 +17,11 @@
         <version.junitVintage>5.2.0</version.junitVintage>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.3.0</version>
+        </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
             <artifactId>jackson-module-kotlin</artifactId>
