--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
     </prerequisites>
     <modules>
         <module>worlds-service</module>
+        <module>worlds-webapp</module>
     </modules>
     <properties>
         <java.version>1.8</java.version>
