--- a/worlds-webapp/package.json
+++ b/worlds-webapp/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "i18next": "^11.3.2",
+    "i18next-browser-languagedetector": "^2.2.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-i18next": "^7.7.0",
     "react-scripts": "1.1.4",
     "semantic-ui-css": "^2.3.1",
     "semantic-ui-react": "^0.81.1"
