--- a/worlds-webapp/package.json
+++ b/worlds-webapp/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "history": "^4.7.2",
     "i18next": "^11.3.2",
     "i18next-browser-languagedetector": "^2.2.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-i18next": "^7.7.0",
+    "react-redux": "^5.0.7",
+    "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.1.4",
+    "redux-box": "^1.6.1",
     "semantic-ui-css": "^2.3.1",
     "semantic-ui-react": "^0.81.1"
   },
