--- a/worlds-webapp/.flowconfig
+++ b/worlds-webapp/.flowconfig
@@ -1,4 +1,7 @@
 [ignore]
+<PROJECT_ROOT>/node_modules/vision/test/templates/invalid/helpers/bad1.json
+<PROJECT_ROOT>/node_modules/immer/dist/immer.js.flow
+<PROJECT_ROOT>/node_modules/config-chain/test/broken.json
 
 [include]
 
