--- a/worlds-webapp/package.json
+++ b/worlds-webapp/package.json
@@ -7,6 +7,7 @@
     "history": "^4.7.2",
     "i18next": "^11.3.2",
     "i18next-browser-languagedetector": "^2.2.0",
+    "jwt-decode": "^2.2.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-i18next": "^7.7.0",
