Support for making API calls to the backend server

--- a/worlds-webapp/.env.development
+++ b/worlds-webapp/.env.development
@@ -1,3 +1,4 @@
 REACT_APP_AUTH_URL=http://localhost:8080/openid/authorize
 REACT_APP_AUTH_CLIENT=9A9F78E3-D8F0-4031-9C9C-77708CB9A315
 REACT_APP_AUTH_CALLBACK=http://localhost:3000/auth/callback.html
+REACT_APP_API_BASE=http://localhost:8080/api
