--- a/worlds-webapp/package.json
+++ b/worlds-webapp/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "build-url": "^1.1.1",
     "history": "^4.7.2",
     "i18next": "^11.3.2",
@@ -17,6 +18,7 @@
     "redux-box": "^1.6.1",
     "semantic-ui-css": "^2.3.1",
     "semantic-ui-react": "^0.81.1",
+    "url-template": "^2.0.8",
     "uuid": "^3.2.1"
   },
   "scripts": {
@@ -26,6 +28,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "axios-mock-adapter": "^1.15.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "flow-bin": "^0.73.0",
