Support for building a Docker container for the backend service, and running both it and Postgres in a cluster

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
                         <nrOfIndentSpace>4</nrOfIndentSpace>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>com.spotify</groupId>
+                    <artifactId>dockerfile-maven-plugin</artifactId>
+                    <version>1.4.0</version>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
