--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,12 @@ services:
             - "127.0.0.1:8080:8080"
         environment:
             PG_URI: jdbc:postgresql://postgres:5432/worlds?user=worlds&password=worlds
+    worlds-webapp:
+        image: worlds/webapp:0.0.1-SNAPSHOT
+        ports: 
+            - "127.0.0.1:8000:80"
+        environment:
+            REACT_APP_AUTH_URL: http://localhost:8080/openid/authorize
+            REACT_APP_AUTH_CLIENT: 4BBBDEB7-4A30-454A-B1BC-A7529204DBCC
+            REACT_APP_AUTH_CALLBACK: http://localhost:8000/auth/callback.html
+            REACT_APP_API_BASE: http://localhost:8080/api
