Enough to get Cucumber set up and working for the E2E tests, and running inside Docker

--- a/worlds-e2e/Dockerfile
+++ b/worlds-e2e/Dockerfile
@@ -1,7 +1,16 @@
 FROM node:9.11.2-alpine
 
-COPY package.json yarn.lock .flowconfig /opt/worlds/e2e/
+RUN apk add --no-cache openssl
+
+ENV DOCKERIZE_VERSION v0.6.1
+RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
+    && tar -C /usr/local/bin -xzvf dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
+    && rm dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz
+
+COPY package.json yarn.lock .flowconfig .babelrc .eslintrc.js /opt/worlds/e2e/
 WORKDIR /opt/worlds/e2e
 
 RUN yarn install
+COPY src /opt/worlds/e2e/
 
+CMD dockerize -wait tcp://postgres:5432 -wait http://api.worlds.com:8080/actuator/health -wait http://www.worlds.com yarn start
