--- a/worlds-e2e/package.json
+++ b/worlds-e2e/package.json
@@ -2,9 +2,28 @@
   "name": "worlds-e2e",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {},
-  "scripts": {},
+  "dependencies": {
+    "babel-polyfill": "^6.26.0"
+  },
+  "scripts": {
+    "lint": "eslint src",
+    "flow": "flow",
+    "check": "yarn lint && yarn flow",
+    "start": "cucumber-js --require-module babel-core/register --require-module babel-polyfill -f node_modules/cucumber-pretty -r cucumber cucumber"
+  },
   "devDependencies": {
-    "flow-bin": "^0.74.0"
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "7.2.3",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-flow": "^6.23.0",
+    "cucumber-pretty": "^1.4.4",
+    "eslint": "^4.19.1",
+    "eslint-config-react-app": "^2.1.0",
+    "eslint-plugin-flowtype": "^2.49.3",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.9.1",
+    "flow-bin": "^0.74.0",
+    "unexpected": "^10.38.0"
   }
 }
