--- a/shippable.yml
+++ b/shippable.yml
@@ -6,10 +6,14 @@ jdk:
 build:
     ci:
         # A bunch of setup stuff first
+        - curl -L https://github.com/docker/compose/releases/download/1.18.0/docker-compose-`uname -s`-`uname -m` -o /usr/local/bin/docker-compose
+        - chmod +x /usr/local/bin/docker-compose
         - adduser --disabled-password --gecos "" ciuser
         - CIUSER_BUILD_DIR=/home/ciuser/build
         - cp -r $SHIPPABLE_BUILD_DIR $CIUSER_BUILD_DIR
         - chown -R ciuser:ciuser $CIUSER_BUILD_DIR
           # Then, build running all tests but as a non-root user because of Postgres 
         - su -c "cd $CIUSER_BUILD_DIR && mvn clean install -B" ciuser
+          # Finally, build and run the end-to-end tests
         - mvn clean install -Pdocker -DskipTests -B
+        - docker-compose -f docker-compose-e2e.yml up --exit-code-from worlds-e2e
