--- a/worlds-webapp/package.json
+++ b/worlds-webapp/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "build-url": "^1.1.1",
+    "connected-react-router": "^4.3.0",
     "history": "^4.7.2",
     "i18next": "^11.3.2",
     "i18next-browser-languagedetector": "^2.2.0",
@@ -13,7 +14,7 @@
     "react-dom": "^16.4.0",
     "react-i18next": "^7.7.0",
     "react-redux": "^5.0.7",
-    "react-router-redux": "^5.0.0-alpha.9",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "redux-box": "^1.6.1",
     "semantic-ui-css": "^2.3.1",
