Minor tweaks to deploy to Heroku

--- a/worlds-service/Dockerfile
+++ b/worlds-service/Dockerfile
@@ -6,9 +6,10 @@ ARG JAR_FILE
 RUN echo JAR_FILE=${JAR_FILE}
 
 ENV PG_URI=
+ENV PORT=8080
 
 ADD ${JAR_FILE} /opt/worlds/service.jar
 WORKDIR /opt/worlds
-CMD java -Dspring.datasource.url="$PG_URI" -Dspring.profiles.active=prod -jar service.jar
+CMD java -Dspring.datasource.url="$PG_URI" -Dserver.port="$PORT" -Dspring.profiles.active=prod -jar service.jar
 
 HEALTHCHECK CMD curl -f http://localhost:8080/actuator/health || exit 1
