--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     <modules>
         <module>worlds-service</module>
         <module>worlds-webapp</module>
+        <module>worlds-e2e</module>
     </modules>
     <properties>
         <java.version>1.8</java.version>
