--- a/worlds-e2e/pom.xml
+++ b/worlds-e2e/pom.xml
@@ -12,6 +12,7 @@
     <description>End-to-end tests for New Worlds</description>
     <properties>
         <version.cucumber>3.0.2</version.cucumber>
+        <version.selenium>3.13.0</version.selenium>
     </properties>
     <dependencies>
         <dependency>
@@ -36,6 +37,21 @@
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib-jdk8</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-chrome-driver</artifactId>
+            <version>${version.selenium}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-firefox-driver</artifactId>
+            <version>${version.selenium}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>${version.selenium}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
