--- a/worlds-e2e/pom.xml
+++ b/worlds-e2e/pom.xml
@@ -31,6 +31,11 @@
             <version>${version.cucumber}</version>
         </dependency>
         <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility-kotlin</artifactId>
+            <version>3.1.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-reflect</artifactId>
         </dependency>
