--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <maven>3.5.0</maven>
     </prerequisites>
     <modules>
+        <module>worlds-cucumber</module>
         <module>worlds-service</module>
         <module>worlds-webapp</module>
         <module>worlds-e2e</module>
@@ -34,6 +35,7 @@
         <kotlin.version>1.2.41</kotlin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <version.cucumber>3.0.2</version.cucumber>
     </properties>
     <repositories>
         <repository>
