--- a/worlds-service/pom.xml
+++ b/worlds-service/pom.xml
@@ -12,7 +12,6 @@
     <description>Backend Service for New Worlds</description>
     <properties>
         <version.activation>1.2.0</version.activation>
-        <version.cucumber>3.0.2</version.cucumber>
         <version.jaxb>2.3.0</version.jaxb>
         <version.junitJupiter>5.2.0</version.junitJupiter>
         <version.junitPlatform>1.2.0</version.junitPlatform>
@@ -93,6 +92,12 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>worlds-cucumber</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>commons-jxpath</groupId>
